{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "2825a818-ac63-4e7e-a699-040f2a9f6d0f",
            "actions": [
                {
                    "name": "SingleTouch",
                    "type": "Value",
                    "id": "e88eadd5-59cb-4a5b-8ce9-b9f2b5da6ea7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTouch",
                    "type": "Value",
                    "id": "8a8b92dc-86ab-4666-b8b1-9c4188cad04f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTouchContact",
                    "type": "Button",
                    "id": "d4f8e527-f13a-4e4b-85e9-f221c510b1bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SingleTouchContact",
                    "type": "Button",
                    "id": "34f40db5-ca0b-4502-9ce5-058e0bc37721",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f754dc24-1d5b-4921-bd9c-f099e1b1bfb3",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02919c89-1b9e-4a77-8931-03f0c825daa2",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "587e2dd6-c28a-4644-b414-d4dceaec8552",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "186f13e9-bf0b-435e-8592-dbbb89a2134f",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}